--- a/day13/static/ajax.html
+++ b/day13/static/ajax.html
@@ -5,28 +5,26 @@
 <title>Insert title here</title>
 <script src="jquery-3.7.1.min.js"></script>
 <script>
-
-	$.ajax({
-		url : '',
-		data : 
-	});
+function myclick(){
+	var params = {
+		'e_id' : '짬뽕',
+	};
 	
-	function myclick(){
-		$('#mydiv').html('Good Evening');
-		
-	}
-$(document).ready(function(){
-	$('#btn').bind("click",function(){
-		myclick();
-		
-		
-		
-	})
-});
+	$.ajax({
+		url: "../myajax",
+		type: "post",
+		data: JSON.stringify(params),
+	    dataType: "json",
+	    contentType: "application/json",
+		success: function(resp) {
+		   console.log(resp);
+		}
+	});
+}
+
 </script>
 </head>
 <body>
-<div id="mydiv">Good Morning</div>
-<input type="button" value="CLICK" id="btn"/>
+<input type="button" value="CLICK" id="btn" onclick="myclick()"/>
 </body>
 </html>
