--- a/day13/static/emp.html
+++ b/day13/static/emp.html
@@ -74,7 +74,7 @@ function fn_one(e_id){
 	});
 }
 
-function fn_mod(){
+function fn_add(){
 		console.log("click!")
 		var params = {
 			'e_id' : $('#e_id').val(),
@@ -218,7 +218,7 @@ $(document).ready(function(){
 	</tr>
 	<tr>
 		<td colspan="3">
-			<input type="button" value="추가" onclick="fn_mod()"/>
+			<input type="button" value="추가" onclick="fn_add()"/>
 			<input type="button" value="수정" onclick="fn_mod()"/>
 			<input type="button" value="삭제" onclick="fn_del()"/>
 		</td>
